<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_notification"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_notification"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="60dp"
            android:columnCount="1"
            android:rowCount="3"
            tools:ignore="RtlSymmetry">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fake_title_notification"
                android:textColor="@color/black"
                android:maxLines="1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginEnd="10dp"

                android:layout_marginStart="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/message_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fake_message_notification"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fake_date_notification"
                android:maxLines="1"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:gravity="end"/>
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>